--- a/css/styled-select.css
+++ b/css/styled-select.css
@@ -5,7 +5,7 @@ select {
   appearance: none;
 
   /* So text doesn't overlap image */
-  padding-right: 2rem;
+  padding-right: 1.5em;
 
   /* Add a custom image for the dropdown */
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8 8" fill="none" stroke="black"><path d="M7.5 3L4 6 .5 3"/></svg>');
