--- a/scss/html.scss
+++ b/scss/html.scss
@@ -140,6 +140,22 @@ svg {
   height: auto;
 }
 
+img {
+  max-width: 100%;
+}
+img[width] {
+  width: auto; /* Defer to max-width */
+}
+img[width][height] {
+  height: auto; /* Preserve aspect ratio */
+}
+/* Let SVG scale without boundaries */
+img[src$=".svg"] {
+  width: 100%;
+  height: auto;
+  max-width: none;
+}
+
 svg {
   fill: currentColor;
   stroke: currentColor;
