--- a/scss/html.scss
+++ b/scss/html.scss
@@ -26,8 +26,8 @@ html {
 
 body {
   margin: 0;
-  font: 1rem/1.5 "Montserrat", "Avenir Next", "Avenir", "Helvetica", "Arial",
-    sans-serif
+  font: 1rem/1.5 "Montserrat", "Avenir Next", "Avenir", "Helvetica", "Arial", sans-serif;
+  text-rendering: optimizeSpeed;
 }
 
 p,
