--- a/scss/html.scss
+++ b/scss/html.scss
@@ -1,21 +1,20 @@
-:root {
-  --blue: #{$blue};
-  --green: #{$green};
-  --red: #{$red};
-  --yellow: #{$yellow};
+// :root {
+//   --blue: #{$blue};
+//   --green: #{$green};
+//   --red: #{$red};
+//   --yellow: #{$yellow};
 
-  --highlight: #{$highlight};
-  --stroke: #{$stroke};
-  --success: #{$green};
-  --error: #{$red};
-  --warning: var(--yellow);
-}
+//   --highlight: #{$highlight};
+//   --stroke: #{$stroke};
+//   --success: #{$green};
+//   --error: #{$red};
+//   --warning: var(--yellow);
+// }
 
 html {
   box-sizing: border-box;
   text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeSpeed;
 }
 
 *,
@@ -24,10 +23,13 @@ html {
   box-sizing: inherit;
 }
 
-body {
+html, body, div, form, fieldset, legend, label {
   margin: 0;
-  font: 1rem/1.5 "Montserrat", "Avenir Next", "Avenir", "Helvetica", "Arial", sans-serif;
-  text-rendering: optimizeSpeed;
+  padding: 0; 
+}
+
+h1, h2, h3, h4, h5, h6, th, td, caption {
+  font-weight: normal;
 }
 
 p,
@@ -60,42 +62,22 @@ h6 {
 }
 
 h1 {
-  font-size: rem(36px);
-  @include breakpoint(md) {
-    font-size: rem(48px);
-  }
+ font-size: clamp(2.25rem, 6vw, 3.75rem);
 }
-
 h2 {
-  font-size: rem(32px);
-  @include breakpoint(md) {
-    font-size: rem(42px);
-  }
+ font-size: clamp(2rem, 5vw, 3rem);
 }
-
 h3 {
-  font-size: rem(28px);
-  @include breakpoint(md) {
-    font-size: rem(36px);
-  }
+ font-size: clamp(1.75rem, 4vw, 2.5rem);
 }
-
 h4 {
-  font-size: rem(24px);
-  @include breakpoint(md) {
-    font-size: rem(30px);
-  }
+ font-size: clamp(1.5rem, 3vw, 1.75rem);
 }
-
 h5 {
-  font-size: rem(20px);
-  @include breakpoint(md) {
-    font-size: rem(24px);
-  }
+ font-size: 1.25rem;
 }
-
 h6 {
-  font-size: rem(18px);
+ font-size: 1.125rem;
 }
 
 a,
@@ -106,20 +88,20 @@ button {
   transition-timing-function: ease;
   cursor: pointer;
 
-  &:hover,
-  &:focus {
-    filter: brightness(120%);
-  }
+//   &:hover,
+//   &:focus {
+//     filter: brightness(120%);
+//   }
 
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
+//   &:disabled {
+//     opacity: 0.5;
+//     cursor: not-allowed;
 
-    &:hover {
-      // Leave :focus effect for keyboard users
-      filter: none;
-    }
-  }
+//     &:hover {
+//       // Leave :focus effect for keyboard users
+//       filter: none;
+//     }
+//   }
 }
 
 a {
@@ -143,21 +125,12 @@ svg {
   height: auto;
 }
 
-img {
-  max-width: 100%;
-}
-img[width] {
-  width: auto; /* Defer to max-width */
-}
-img[width][height] {
-  height: auto; /* Preserve aspect ratio */
-}
 /* Let SVG scale without boundaries */
-img[src$=".svg"] {
-  width: 100%;
-  height: auto;
-  max-width: none;
-}
+// img[src$=".svg"] {
+//   width: 100%;
+//   height: auto;
+//   max-width: none;
+// }
 
 svg {
   fill: currentColor;
@@ -172,10 +145,7 @@ svg {
 }
 
 fieldset {
-  margin-left: 0;
-  margin-right: 0;
   border: 0;
-  padding: 0;
 }
 
 legend {
@@ -188,64 +158,58 @@ select,
 textarea {
   width: 100%;
   max-width: 100%;
-  border: 1px solid var(--stroke);
+  height: 1.5rem;
   font: inherit;
   color: inherit;
   letter-spacing: inherit;
-
-  &:disabled {
-    opacity: 0.5;
-    cursor: not-allowed;
-  }
 }
-
-select {
-  appearance: textfield;
-  appearance: none; // Hides the default dropdown arrow
-  padding-right: 2.3em; // So text doesn't overlap image
-  // use color variable, then string-replace '#' with '%23' for browser support
-  background-image: url(str-replace(
-    'data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='4'><path fill="#{$highlight}" d='M4 0h6L7 4'/></svg>',
-    "#",
-    "%23"
-  ));
-  
-  background-size: 0.7em;
-  background-repeat: no-repeat;
-  background-position: right 0.8em center;
-
-  &::-ms-expand {
-    display: none; // Hides the default dropdown arrow in IE11
-  }
+input[type="checkbox"],
+input[type="radio"],
+input[type="file"],
+input[type="image"],
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  width: initial;
+  height: initial;
 }
-
 textarea {
+  height: initial;
   resize: vertical;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-  width: auto;
-}
+// select {
+//   appearance: textfield;
+//   appearance: none; // Hides the default dropdown arrow
+//   padding-right: 2.3em; // So text doesn't overlap image
+//   // use color variable, then string-replace '#' with '%23' for browser support
+//   background-image: url(str-replace(
+//     'data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='4'><path fill="#{$highlight}" d='M4 0h6L7 4'/></svg>',
+//     "#",
+//     "%23"
+//   ));
+  
+//   background-size: 0.7em;
+//   background-repeat: no-repeat;
+//   background-position: right 0.8em center;
 
-input[type="submit"],
-input[type="button"] {
-  @extend button;
-  width: auto;
-}
+//   &::-ms-expand {
+//     display: none; // Hides the default dropdown arrow in IE11
+//   }
+// }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button,
-input[type="search"] {
-  appearance: none;
-}
+// input[type="number"]::-webkit-inner-spin-button,
+// input[type="number"]::-webkit-outer-spin-button,
+// input[type="search"] {
+//   appearance: none;
+// }
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-  // display: none;
-}
+// input[type="search"]::-webkit-search-decoration,
+// input[type="search"]::-webkit-search-cancel-button,
+// input[type="search"]::-webkit-search-results-button,
+// input[type="search"]::-webkit-search-results-decoration {
+//   display: none;
+// }
 
 small {
   font-size: 80%;
@@ -253,12 +217,12 @@ small {
 
 table {
   width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 pre {
   overflow: auto;
-  max-height: rem(500px);
-  padding: rem(5px);
   white-space: pre-wrap;
 }
 
