--- a/css/html.css
+++ b/css/html.css
@@ -1,15 +1,15 @@
-// :root {
-//   --blue: #{$blue};
-//   --green: #{$green};
-//   --red: #{$red};
-//   --yellow: #{$yellow};
+/* :root {
+  --blue: #{$blue};
+  --green: #{$green};
+  --red: #{$red};
+  --yellow: #{$yellow};
 
-//   --highlight: #{$highlight};
-//   --stroke: #{$stroke};
-//   --success: #{$green};
-//   --error: #{$red};
-//   --warning: var(--yellow);
-// }
+  --highlight: #{$highlight};
+  --stroke: #{$stroke};
+  --success: #{$green};
+  --error: #{$red};
+  --warning: var(--yellow);
+} */
 
 html {
   box-sizing: border-box;
@@ -88,24 +88,23 @@ button {
   transition-timing-function: ease;
   cursor: pointer;
 
-//   &:hover,
-//   &:focus {
-//     filter: brightness(120%);
-//   }
+/*   &:hover,
+  &:focus {
+    filter: brightness(120%);
+  }
 
-//   &:disabled {
-//     opacity: 0.5;
-//     cursor: not-allowed;
+  &:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 
-//     &:hover {
-//       // Leave :focus effect for keyboard users
-//       filter: none;
-//     }
-//   }
+    &:hover {
+      /* Leave :focus effect for keyboard users */
+      filter: none;
+    }
+  } */
 }
 
 a {
-  // color: var(--highlight);
   text-decoration: none;
 }
 
@@ -126,18 +125,18 @@ svg {
 }
 
 /* Let SVG scale without boundaries */
-// img[src$=".svg"] {
-//   width: 100%;
-//   height: auto;
-//   max-width: none;
-// }
+/* img[src$=".svg"] {
+  width: 100%;
+  height: auto;
+  max-width: none;
+} */
 
 svg {
   fill: currentColor;
   stroke: currentColor;
   stroke-width: 0;
 
-  // Prevent clicks on SVG's inside links and buttons
+  /* Prevent clicks on SVG's inside links and buttons */
   a &,
   button & {
     pointer-events: none;
@@ -148,68 +147,53 @@ fieldset {
   border: 0;
 }
 
-legend {
-  padding-left: 0;
-  padding-right: 0;
-}
-
 input,
 select,
 textarea {
-  width: 100%;
-  max-width: 100%;
-  height: 1.5rem;
   font: inherit;
   color: inherit;
   letter-spacing: inherit;
 }
-input[type="checkbox"],
-input[type="radio"],
-input[type="file"],
-input[type="image"],
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  width: initial;
-  height: initial;
+input:not(
+  input[type="checkbox"],
+  input[type="radio"],
+  input[type="file"],
+  input[type="image"],
+  input[type="button"],
+  input[type="reset"],
+  input[type="submit"]
+), select, textarea {
+  width: 100%;
+  max-width: 100%;
+  border: 1px solid;
+  padding: 2px;
+}
+select {
+  appearance: none;
+  background: #fff;
 }
 textarea {
   height: initial;
   resize: vertical;
 }
+select {
+  appearance: none;
+  padding-right: 2em;
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="8"><path fill="black" d="M0 0 H16 L8 8 Z"/></svg>') right 0.6em center / .8em no-repeat, #fff;
+}
 
-// select {
-//   appearance: textfield;
-//   appearance: none; // Hides the default dropdown arrow
-//   padding-right: 2.3em; // So text doesn't overlap image
-//   // use color variable, then string-replace '#' with '%23' for browser support
-//   background-image: url(str-replace(
-//     'data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='16' height='4'><path fill="#{$highlight}" d='M4 0h6L7 4'/></svg>',
-//     "#",
-//     "%23"
-//   ));
-  
-//   background-size: 0.7em;
-//   background-repeat: no-repeat;
-//   background-position: right 0.8em center;
+/* input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button,
+input[type="search"] {
+  appearance: none;
+}
 
-//   &::-ms-expand {
-//     display: none; // Hides the default dropdown arrow in IE11
-//   }
-// }
-
-// input[type="number"]::-webkit-inner-spin-button,
-// input[type="number"]::-webkit-outer-spin-button,
-// input[type="search"] {
-//   appearance: none;
-// }
-
-// input[type="search"]::-webkit-search-decoration,
-// input[type="search"]::-webkit-search-cancel-button,
-// input[type="search"]::-webkit-search-results-button,
-// input[type="search"]::-webkit-search-results-decoration {
-//   display: none;
-// }
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+} */
 
 small {
   font-size: 80%;
@@ -226,16 +210,16 @@ pre {
   white-space: pre-wrap;
 }
 
-::-moz-focus-inner {
+/* ::-moz-focus-inner {
   border: 0;
   padding: 0;
-}
+} */
 
 [id] {
   scroll-margin-top: 2ex;
 }
 
-// Text highlight effect 
+/* Text highlight effect */
 ::selection {
   color: #fff;
   background: $highlight;
