--- a/css/theme.css
+++ b/css/theme.css
@@ -104,6 +104,13 @@ button,
   outline: 3px solid var(--outline);
   outline-offset: 1px;
 }
+:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
+[readonly] {
+  border-style: dotted;
+}
 @media (prefers-reduced-motion: reduce) {
   *,
   *::before,
