--- a/css/theme.css
+++ b/css/theme.css
@@ -30,6 +30,7 @@
 *,
 *::before,
 *::after {
+  box-sizing: border-box;
   border: 0 solid var(--grey);
 }
 html {
@@ -66,7 +67,7 @@ input,
 textarea,
 select {
   display: block;
-  width: 100%;
+  inline-size: 100%;
 }
 input[type="radio"],
 input[type="checkbox"] {
@@ -105,11 +106,11 @@ button,
   outline-offset: 1px;
 }
 :disabled {
-  opacity: 0.7;
+  border-style: dotted;
   cursor: not-allowed;
 }
 [readonly] {
-  border-style: dotted;
+  border-style: dashed;
 }
 @media (prefers-reduced-motion: reduce) {
   *,
