--- a/css/theme.css
+++ b/css/theme.css
@@ -106,7 +106,8 @@ button,
   outline: 3px solid var(--outline);
   outline-offset: 1px;
 }
-:disabled {
+:disabled,
+[aria-disabled="true"]{
   border-style: dotted;
   cursor: not-allowed;
   opacity: 0.8;
